# bootstrap-co

FT/: Cargo.toml  TODOs.md
FT/ft/: Cargo.toml
FT/ft/src/: lib.rs  token_set_info.rs  utils.rs
FT/res/: fungible_token.wasm  token_set_fungible_token.wasm
FT/tests/sim/: utils.rs  with_macros.rs
FT/token-set/: Cargo.toml
FT/token-set/src/: lib.rs  token_set_info.rs  utils.rs
