[package]
name = "token-set-fungible-token"
version = "1.0.0"
authors = ["Lev Stambler"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
near-internal-balance = { path = "../../../near-defi-standards/near-internal-balance" }
primitive-types = "0.10.1"
